--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.2",
     "@types/nprogress": "^0.2.3",
     "axios": "^1.7.2",
     "next": "14.2.4",
